--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>TODO APP</title>
+    <link rel="stylesheet" href="dist/main.css">
+    <script async src="js/app.js"></script>
 </head>
-<body>
+<body onload="init()">
+<div class="todo_list">
+    <h1>TODO List</h1>
+    <div class="add_panel">
+        <button id="add_btn">+</button>
+        <form id="info_form" action="#" onsubmit="return false;" method="post" style="display: none">
+            <fieldset>
+                <!--title-->
+                <label for="form_title">Title</label>
+                <input type="text" id="form_title" required>
+                <br>
+                <!--description-->
+                <label for="form_description">Description</label>
+                <textarea cols="20" rows="5" wrap="hard" id="form_description" placeholder="description ..."></textarea>
+                <br>
+                <!--date and time-->
+                <label for="form_datetime">Date/Time</label>
+                <input type="datetime-local" id="form_datetime" required>
+            </fieldset>
 
+            <button type="submit" id="form_submit_btn">Apply</button>
+        </form>
+    </div>
+    <p id="lists"></p>
+</div>
 </body>
 </html>
