feat: add more comment & add usage instruction to REAEME.md

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TODO APP</title>
     <link rel="stylesheet" href="dist/main.css">
+    <!--import app.js-->
     <script async src="js/app.js"></script>
 </head>
 <!--run init function when loading body-->
